  VFSManager.getFilesystems()
  VFSFile.name
  VFSFile.path
  VFSFile.symlinkPath
  VFSFile.deletePath
  VFSFile.type
  VFSFile.length
  VFSFile.hidden
  VFSFile.canRead
  VFSFile.canWrite
  ReadWriteLock
  (Matthieu Casanova)

- Applied patch #2809978 to remove use of deprecated methods in jEdit's
  textarea (#2809978 from Kevin Hunter, Matthieu Casanova)

}}}
{{{ Editing

- Syntax for Macro Scheduler (#3085538) (glen117)

- Additional mode for CPlex LP files (#3332052) (Kevin Hunter)

- PowerShell mode update (#3316284) (Jeremy)

- `elsif compiler directive added to verilog edit mode (#3261277)
  (Matthieu Casanova)

- Fixed indentation in javacc edit mode that can fail if a token contains
  "else" (Matthieu Casanova)

- Updated java edit mode among other things it now highlight special chars
  like \n \uXXXX unicode, \t, \r in string literal (Matthieu Casanova)

- Factor Mode fix (#3100731 - Valeri Mytinski)

- Added new keywords to C# edit mode (patch #3120746 from nherzing,
  Matthieu Casanova)

- New edit mode option: Elastic Tabstops. (Anshal Shukla + Shlomy Reinstein)

- Applied patch from Matthew Gilbert to add ability to increase/decrease line
  spacing in the text area. (#3023134, Dale Anson)

- Added jflex edit mode (Matthieu Casanova)

- Added lex/flex edit mode (Matthieu Casanova)

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language
  (patch #3042398 from jclopes, Matthieu Casanova)

- Added coffee edit mode (patch #3173375 from Dennis Hotson, Matthieu Casanova)

}}}
{{{ UI

- Changes to the Look and Feel are now applied immediately without the need to
  restart the application. (Björn "Vampire" Kautler)

- jEdit has now a systray icon. It can be replaced by implementing the
  org.gjt.sp.jedit.gui.tray.JEditTrayIcon service (feature #1657143)
  (Matthieu Casanova)

- Ability to customize the browser context menu (feature #3354306)